# grocr

./: .docker-compose.yml.swp  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  mcp_server.py  pyproject.toml  settings.py
adapters/: albert.py  base.py
api/: main.py
db/: models.py
grafana/dashboards/: grocr.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: postgres.yaml
mcp/: server.py
sync/: engine.py  registry.py
