[project]
name = "grocr"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.136.0",
    "mcp>=1.27.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
